legacy/k3s/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      port: 80
      targetPort: http
